--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
     "civitai": "^0.1.15",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@types/axios": "^0.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
